Update index and about page with new content

--- a/about.html
+++ b/about.html
@@ -99,18 +99,21 @@
             <p class="py-3">
               I am a driven and detail-oriented software engineer with a strong foundation in computer science and a
               passion for building scalable, high-performance systems. Having recently completed my Master’s in Computer
-              Science at the University of California, Irvine, I specialize in full-stack development, distributed
-              backend architectures, and AI-driven applications. My interests lie at the intersection of intelligent
-              systems, cloud computing, and resilient software design, with a focus on delivering real-world impact
-              through clean, modular, and scalable code.
+              Science at the University of California, Irvine (Dec 2024), I specialize in full-stack development,
+              distributed backend architectures, and AI-driven applications. My interests lie at the intersection of
+              intelligent systems, cloud computing, and resilient software design, with a focus on delivering real-world
+              impact through clean, modular, and scalable engineering.
+
             </p>
             <p class="py-3">
               My professional experience spans impactful roles at UC Irvine and Max Developer, where I designed and
-              deployed full-stack platforms, automated large-scale data pipelines, and architected geo-distributed
-              transaction frameworks. From building React.js dashboards with Flask backends on AWS to optimizing
-              concurrency models across MongoDB clusters, I have consistently engineered solutions that enhance system
-              reliability, reduce latency, and scale seamlessly. I thrive in fast-paced, collaborative environments and
-              approach every project with a mindset rooted in curiosity, precision, and user-centered problem-solving
+              deployed real-time fleet tracking platforms, automated large-scale data ingestion pipelines, and
+              architected geo-distributed transaction frameworks for high-concurrency systems. From building React.js
+              dashboards integrated with Flask and MongoDB backends on AWS and GCP, to optimizing concurrency models
+              across distributed MongoDB clusters, I have consistently engineered solutions that improve system
+              reliability, reduce latency, and scale efficiently. I thrive in fast-paced, collaborative environments and
+              approach every project with a mindset rooted in curiosity, precision, and user-centered problem-solving.
+
             </p>
           </div>
         </div>
