--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Foram Bhanushali</h2>
-        <p>I'm <span class="typed" data-typed-items="Software Engineer, Full-stack Developer"></span><span
+        <p>I'm <span class="typed"
+            data-typed-items="Software Development Engineer, Full-stack Developer, Front-end Developer, Backend Engineer, Distributed Systems Engineer, Cloud Application Developer, "></span><span
             class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
           <a href="https://www.linkedin.com/in/foram-bhanushali21/"><i class="bi bi-linkedin"></i></a>
@@ -87,6 +88,10 @@
 
     </section><!-- /Hero Section -->
 
+    <div class="container" data-aos="zoom-out" data-aos-delay="100">
+      <h3>"Every line of code is a choice: a chance to make systems faster, experiences smoother, and
+        possibilities bigger."</h3>
+    </div>
   </main>
 
   <footer id="footer" class="footer dark-background">
