--- a/resume.html
+++ b/resume.html
@@ -99,9 +99,13 @@
 
             <div class="resume-item pb-0">
               <h4>Foram Bhanushali</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
-                  developing user-centered digital/print marketing material from initial concept to final, polished
-                  deliverable.</em></p>
+              <p><em>Versatile and results-driven Software Engineer with 2+ years of experience architecting scalable,
+                  cloud-native, and distributed systems across e-commerce, edtech, and logistics domains. Skilled in
+                  building high-concurrency, real-time applications using Python, React.js, Flask, Django, and MongoDB,
+                  with strong expertise in cloud platforms (AWS, GCP) and CI/CD automation. Known for leading
+                  cross-functional teams, optimizing system performance, and integrating AI-driven solutions to deliver
+                  user-centered products. Passionate about building intelligent, high-performance systems that solve
+                  real-world problems through clean, efficient engineering.</em></p>
               <ul>
                 <li>San Jose, CA</li>
                 <li>(949) 678-2074</li>
@@ -114,14 +118,14 @@
               <h4>Master of Computer Science</h4>
               <h5>Sep 2023 - Dec 2024</h5>
               <p><em>University of California, Irvine, CA</em></p>
-              <p>Relevant Courses: Artificial Intelligence, Database Systems, Operating Systems, Distributed Systems</p>
+              <p>Relevant Courses: Artificial Intelligence, Data Structures, Distributed Systems, Operating Systems</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
               <h4>Bachelor of Technology in Computer Engineering</h4>
               <h5>Aug 2017 - Jul 2021</h5>
               <p><em>KJ Somaiya College of Engineering, India</em></p>
-              <p>Relevant Courses: Algorithms, Blockchain, Machine Learning, Cloud Computing, Software Testing, Web Tech
+              <p>Relevant Courses: Algorithms, Database Management, Machine Learning, Cloud Computing, Software Testing
               </p>
             </div><!-- Edn Resume Item -->
 
@@ -134,12 +138,12 @@
               <h5>Feb 2025 - Present</h5>
               <p><em>Donald Bren School of Information and Computer Sciences, Irvine, CA </em></p>
               <ul>
-                <li>Designed and architected a modular backend system to automate literature survey generation by
+                <li>• Designed and architected a modular backend system to automate literature survey generation by
                   integrating Semantic Scholar
                   and arXiv APIs, enabling real-time retrieval and aggregation of 10K research papers per query.</li>
-                <li>Engineered scalable data pipelines to parse, analyze, and rank research articles based on citation
-                  metrics, author influence, and
-                  publication recency, improving topic coverage and reducing redundancy by applying lightweight NLP
+                <li>• Engineered scalable data pipelines to parse, analyze, and rank research articles based on citation
+                  metrics, author influence,
+                  and publication recency, improving topic coverage and reducing redundancy by applying lightweight
                   clustering techniques. </li>
               </ul>
             </div><!-- Edn Resume Item -->
