fix skills section

--- a/services.html
+++ b/services.html
@@ -101,7 +101,7 @@
               <a href="service-details.html" class="stretched-link">
                 <h3>Programming Languages</h3>
               </a>
-              <p>Python, Java, JavaScript, C, SQL, Typescript, Bash, Go</p>
+              <p>Java, Python, JavaScript, C, SQL, Typescript, Go</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -125,7 +125,7 @@
               <a href="service-details.html" class="stretched-link">
                 <h3>Databases</h3>
               </a>
-              <p>PostgreSQL, MongoDB, , MySQL, Redis, DynamoDB, Elasticsearch, Apache Spark</p>
+              <p>PostgreSQL, MongoDB, MySQL, Redis, DynamoDB, Elasticsearch, Apache Spark</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -150,7 +150,7 @@
               <a href="service-details.html" class="stretched-link">
                 <h3>Machine Learning</h3>
               </a>
-              <p>Langchain, LLMs(GPT), Numpu, Pandas, Skikit-Learn, Tensorflow, PyTorch, OpenCV</p>
+              <p>Langchain, LLMs(GPT), NumPy, Pandas, Scikit-Learn, Tensorflow, PyTorch, OpenCV</p>
               <a href="service-details.html" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
