--- a/resume.html
+++ b/resume.html
@@ -138,13 +138,12 @@
               <h5>Feb 2025 - Present</h5>
               <p><em>Donald Bren School of Information and Computer Sciences, Irvine, CA </em></p>
               <ul>
-                <li>• Designed and architected a modular backend system to automate literature survey generation by
-                  integrating Semantic Scholar
-                  and arXiv APIs, enabling real-time retrieval and aggregation of 10K research papers per query.</li>
-                <li>• Engineered scalable data pipelines to parse, analyze, and rank research articles based on citation
-                  metrics, author influence,
-                  and publication recency, improving topic coverage and reducing redundancy by applying lightweight
-                  clustering techniques. </li>
+                <li>Cut manual effort by 60% by developing a scalable survey generation pipeline that integrates arXiv
+                  and Semantic Scholar
+                  APIs to auto-aggregate 10K+ research papers per query.</li>
+                <li>Optimized citation ranking logic to improve literature coverage and cut redundancy by 35%, and
+                  refactored the backend into
+                  modular components to support scaling and seamless integration of new data sources.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -153,16 +152,16 @@
               <h5>Jan 2024 - Sep 2024</h5>
               <p><em>University of California, Irvine, CA</em></p>
               <ul>
-                <li>Engineered a full-stack academic advising tool using React.js and Tesseract OCR, improving
-                  transcript data processing
-                  efficiency by 50% through UI modularization and automated text extraction pipelines.</li>
-                <li>Orchestrated a Python-based modular data ingestion system (BeautifulSoup, Requests) to synchronize
-                  2K+ course records
-                  in real-time, ensuring seamless backend API integration and alignment with SDLC best practices.</li>
-                <li>Led a 4-member cross-functional team to deploy a GPT-powered academic assistant, leveraging
-                  OpenAI, LangChain, and
-                  LLM-driven workflows, boosting recommendation accuracy by 20% through iterative prompt tuning and
-                  model evaluation.</li>
+                <li>Streamlined transcript processing by 50% by developing a full-stack academic advising tool with
+                  React.js and Tesseract OCR,
+                  featuring modular UI components and automated text extraction to parse unstructured transcript data.
+                </li>
+                <li>Synced 2K+ course records via an ingestion pipeline using BeautifulSoup and REST APIs, reducing
+                  manual updates by 90%.</li>
+                <li>Deployed a LangChain-GPT advisor using LLM workflows, boosting recommendation accuracy by 20% via
+                  prompt tuning.</li>
+                <li>Led sprint execution and agile coordination across a 4-member team to ensure timely delivery of core
+                  research features.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -171,32 +170,26 @@
               <h5>Sep 2021 - Jun 2023</h5>
               <p><em>Max Developer, India</em></p>
               <ul>
-                <li>Architected and launched scalable full-stack systems across the e-commerce and logistics domains,
-                  engineering mobileoptimized
-                  web platforms and real-time operational dashboards with React.js, Django, Express.js, and MongoDB.
+                <li>Improved user retention and reduced bounce rate by 20% by optimizing page load times, enhancing
+                  navigation flow, and
+                  delivering a mobile-responsive UI across a full-stack e-commerce platform.
                 </li>
-                <li>Built a full-stack, cross-device e-commerce platform using React.js, Express.js, and MongoDB,
-                  reducing bounce rates by 20%
-                  and boosting product discoverability by 15% through dynamic React Router-based filtering and optimized
-                  backend queries.</li>
+                <li>Boosted product discoverability by 15% via dynamic React Router filtering and optimized backend
+                  queries for faster results.</li>
                 <li>Secured 5K+ user profiles with role-based JWT authentication, and implemented seamless checkout
                   experiences via Stripe
                   integrations with webhook-driven order fulfillment, reduced backend latency by 20% through server-side
                   caching strategies.</li>
-                <li>Designed and deployed a real-time fleet tracking system using Django REST Framework, Django
-                  Channels, React, and
-                  Mapbox, enabling dispatch teams to monitor 100+ delivery vehicles and cutting manual coordination
+                <li>Launched a real-time fleet monitoring platform using Django and Mapbox, cutting coordination
                   overhead by 22%.</li>
-                <li>Optimized WebSocket-based GPS data streams with Redis caching, accelerating dashboard coordinate
-                  refresh latency by 40%
-                  during peak traffic; archived historical fleet logs in PostgreSQL and Google Cloud Storage for audit
-                  and reporting compliance.</li>
-                <li>Automated end-to-end CI/CD pipelines using Docker and GitHub Actions, achieving 85% test coverage
-                  and reducing deployment
-                  cycles by 40%; offloaded static media assets to AWS S3 for scalable, high-availability storage.</li>
-                <li>Collaborated closely with cross-functional teams and clients to gather requirements, define
-                  technical roadmaps, prioritize
-                  features, and drive agile delivery cycles from proof-of-concept to production-ready deployments.</li>
+                <li>Accelerated GPS map refresh rates by 40% under peak load by caching WebSocket-streamed location data
+                  with Redis.</li>
+                <li>Archived telemetry data in PostgreSQL and Google Cloud Storage to support audit trails and enable
+                  analytics dashboards.</li>
+                <li>Achieved 85% unit test coverage and sped up deployments by 40% through Docker-based CI/CD pipelines
+                  on GitHub Actions.</li>
+                <li>Collaborated with stakeholders to prioritize features and deliver resilient, scalable backend
+                  systems from spec to production.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
