Added portfolio content and edited files

--- a/about.html
+++ b/about.html
@@ -55,6 +55,8 @@
           <li><a href="about.html" class="active">About</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html">Skills</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -106,14 +108,15 @@
 
             </p>
             <p class="py-3">
-              My professional experience spans impactful roles at UC Irvine and Max Developer, where I designed and
-              deployed real-time fleet tracking platforms, automated large-scale data ingestion pipelines, and
-              architected geo-distributed transaction frameworks for high-concurrency systems. From building React.js
-              dashboards integrated with Flask and MongoDB backends on AWS and GCP, to optimizing concurrency models
-              across distributed MongoDB clusters, I have consistently engineered solutions that improve system
-              reliability, reduce latency, and scale efficiently. I thrive in fast-paced, collaborative environments and
-              approach every project with a mindset rooted in curiosity, precision, and user-centered problem-solving.
-
+              My professional experience includes roles at UC Irvine and Max Developer, where I designed and deployed
+              full-stack systems for academic advising, research automation, and e-commerce operations. At UC Irvine, I
+              built React.js dashboards backed by Flask and MongoDB, deployed on AWS EC2 with CI/CD pipelines, enabling
+              features like GPT-powered course recommendations and transcript parsing using OCR. At Max Developer, I
+              delivered a SaaS e-commerce platform using the MERN stack, reduced API latency with Redis caching, and
+              implemented secure authentication and Stripe-based checkout. I have consistently engineered solutions that
+              improve system reliability, reduce latency, and scale efficiently. I thrive in fast-paced, collaborative
+              environments and approach every project with a mindset rooted in curiosity, precision, and user-centered
+              problem-solving.
             </p>
           </div>
         </div>
