--- a/resume.html
+++ b/resume.html
@@ -55,6 +55,8 @@
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html" class="active">Resume</a></li>
           <li><a href="services.html">Skills</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -138,12 +140,15 @@
               <h5>Feb 2025 - Present</h5>
               <p><em>Donald Bren School of Information and Computer Sciences, Irvine, CA </em></p>
               <ul>
-                <li>Cut manual effort by 60% by developing a scalable survey generation pipeline that integrates arXiv
-                  and Semantic Scholar
-                  APIs to auto-aggregate 10K+ research papers per query.</li>
-                <li>Optimized citation ranking logic to improve literature coverage and cut redundancy by 35%, and
-                  refactored the backend into
-                  modular components to support scaling and seamless integration of new data sources.</li>
+                <li> Automated retrieval of 10K+ research papers via Semantic Scholar and arXiv APIs, reducing manual
+                  searching </li>
+                <li> Boosted topic relevance using TF-IDF and cosine similarity algorithm using citations, author
+                  influence, and recency</li>
+                <li> Built a Django and FastAPI dashboard that used crawlers to fetch research papers from academic APIs
+                  based on user queries</li>
+
+
+
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -152,16 +157,22 @@
               <h5>Jan 2024 - Sep 2024</h5>
               <p><em>University of California, Irvine, CA</em></p>
               <ul>
-                <li>Streamlined transcript processing by 50% by developing a full-stack academic advising tool with
-                  React.js and Tesseract OCR,
-                  featuring modular UI components and automated text extraction to parse unstructured transcript data.
-                </li>
-                <li>Synced 2K+ course records via an ingestion pipeline using BeautifulSoup and REST APIs, reducing
-                  manual updates by 90%.</li>
-                <li>Deployed a LangChain-GPT advisor using LLM workflows, boosting recommendation accuracy by 20% via
-                  prompt tuning.</li>
-                <li>Led sprint execution and agile coordination across a 4-member team to ensure timely delivery of core
-                  research features.</li>
+                <li> Designed a smart course recommender for UCI students using Flask, MongoDB, and GPT to personalize
+                  academic plans</li>
+                <li>Tripled user engagement by converting Figma designs into a React.js and Redux dashboard for
+                  professor ratings and search</li>
+                <li> Accelerated transcript parsing by 50% using Tesseract OCR to extract structured course data from
+                  PDFs with 99% accuracy</li>
+                <li> Increased course recommendation accuracy by 20% using few-shot OpenAI prompts and iterative GPT
+                  tuning with LangChain</li>
+                <li> Curated a microservices architecture with Flask and React enabling modular development and
+                  independent scaling</li>
+                <li> Maintained 99.99% uptime by deploying the platform to AWS EC2 with CI/CD pipelines automated via
+                  GitHub Actions</li>
+                <li> Strengthened platform reliability by implementing 90% test coverage using PyTest and Jest across
+                  APIs and UI components</li>
+                <li> Led sprint execution and agile coordination across a 4-member team to ensure timely delivery of
+                  core research features</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -170,26 +181,22 @@
               <h5>Sep 2021 - Jun 2023</h5>
               <p><em>Max Developer, India</em></p>
               <ul>
-                <li>Improved user retention and reduced bounce rate by 20% by optimizing page load times, enhancing
-                  navigation flow, and
-                  delivering a mobile-responsive UI across a full-stack e-commerce platform.
+                <li> Delivered a SaaS e-commerce platform using MERN, enabling a seamless shopping experience and
+                  streamlining operations</li>
+                <li> Lowered average API response times by 25% by caching high-frequency queries in Redis, reducing
+                  repeated database hits
+                  under load, and optimized MongoDB queries using compound indexes and projection filters to accelerate
+                  product search</li>
+                <li> Elevated engagement by 15% by optimizing React component rendering to reduce load time and speed up
+                  product filtering</li>
+                <li> Implemented secure user authentication by integrating OAuth 2.0 with JWT-based role access control,
+                  and streamlined
+                  checkout by integrating Stripe’s hosted flow with webhook-based order confirmation enabling protected
+                  user workflows</li>
+                <li>Reduced manual labor by 8 hours/week by building a custom admin dashboard for inventory management
                 </li>
-                <li>Boosted product discoverability by 15% via dynamic React Router filtering and optimized backend
-                  queries for faster results.</li>
-                <li>Secured 5K+ user profiles with role-based JWT authentication, and implemented seamless checkout
-                  experiences via Stripe
-                  integrations with webhook-driven order fulfillment, reduced backend latency by 20% through server-side
-                  caching strategies.</li>
-                <li>Launched a real-time fleet monitoring platform using Django and Mapbox, cutting coordination
-                  overhead by 22%.</li>
-                <li>Accelerated GPS map refresh rates by 40% under peak load by caching WebSocket-streamed location data
-                  with Redis.</li>
-                <li>Archived telemetry data in PostgreSQL and Google Cloud Storage to support audit trails and enable
-                  analytics dashboards.</li>
-                <li>Achieved 85% unit test coverage and sped up deployments by 40% through Docker-based CI/CD pipelines
-                  on GitHub Actions.</li>
                 <li>Collaborated with stakeholders to prioritize features and deliver resilient, scalable backend
-                  systems from spec to production.</li>
+                  systems from spec to production </li>
               </ul>
             </div><!-- Edn Resume Item -->
 
