--- a/services.html
+++ b/services.html
@@ -55,6 +55,8 @@
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html" class="active">Skills</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -98,8 +100,8 @@
               <div class="icon">
                 <i class="bi bi-activity"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
-                <h3>Programming Languages</h3>
+
+              <h3>Programming Languages</h3>
               </a>
               <p>Java, Python, JavaScript, C, SQL, Typescript, Go</p>
             </div>
@@ -110,8 +112,7 @@
               <div class="icon">
                 <i class="bi bi-broadcast"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
-                <h3>Web Development</h3>
+              <h3>Web Development</h3>
               </a>
               <p>React.js, Next.js, Spring Boot, Django, Flask, Express.js, Node.js, HTML, CSS, PHP, GraphQL</p>
             </div>
@@ -122,8 +123,7 @@
               <div class="icon">
                 <i class="bi bi-easel"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
-                <h3>Databases</h3>
+              <h3>Databases</h3>
               </a>
               <p>PostgreSQL, MongoDB, MySQL, Redis, DynamoDB, Elasticsearch, Apache Spark</p>
             </div>
@@ -134,11 +134,9 @@
               <div class="icon">
                 <i class="bi bi-bounding-box-circles"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
-                <h3>Devops and Cloud</h3>
+              <h3>Devops and Cloud</h3>
               </a>
               <p>Git, GitHub Actions, Docker, AWS, GCP, Azure, Kubernetes, Jenkins, CI/CD, Grafana</p>
-              <a href="service-details.html" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -147,11 +145,9 @@
               <div class="icon">
                 <i class="bi bi-calendar4-week"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
-                <h3>Machine Learning</h3>
+              <h3>Machine Learning</h3>
               </a>
               <p>Langchain, LLMs(GPT), NumPy, Pandas, Scikit-Learn, Tensorflow, PyTorch, OpenCV</p>
-              <a href="service-details.html" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -160,11 +156,9 @@
               <div class="icon">
                 <i class="bi bi-chat-square-text"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
-                <h3>Other Tools</h3>
+              <h3>Other Tools</h3>
               </a>
               <p>REST APIs, FastAPIs, PyTest, Jest, Jira | Operating Systems: macOS, Linux(Ubuntu), Unix, Windows</p>
-              <a href="service-details.html" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
